# dinov3-equinox

./: .gitignore  LICENSE.md  README.md  pyproject.toml
dinov3_equinox/: __init__.py  __main__.py  act.py  attention.py  classifier.py  ff.py  imagenet_classes.py  misc.py  rope.py  safetensors.py  types.py  vit.py
dinov3_equinox/layers/: attention.py  block.py  ff.py  misc.py  norm.py  patch_embed.py  rope.py
dinov3_equinox/models/: __init__.py  convnext.py  vit.py
